# GOL_cpp

./: CMakeLists.txt  Makefile.am  Makefile.bc  Makefile.cvs  Option.cpp  Option.h  OptionsIO.cpp  OptionsIO.h  OptionsLoader.h  README.md  config.h.in  configure.ac  doxygen.cfg  example.cpp  mkdocs.yml  mkdocs4readthedocs.yml  run_doxygen.bat  tester.cpp  todo.txt  windows_config.h
docs/: Applications.md  Building.md  ChangeLog.md  Home.md  Meta.md  Todo.md  Usage.md  index.md
msvc/msvc2013/: options.sln
msvc/msvc2013/example/: example.vcxproj
msvc/msvc2013/tester/: tester.vcxproj
msvc/msvc2013/y_libutils_options/: y_libutils_options.vcxproj
msvc/msvc2013/y_libutils_options_xerces/: y_libutils_options_xerces.vcxproj
msvc/msvc2017/: options.sln
msvc/msvc2017/example/: example.vcxproj
msvc/msvc2017/tester/: tester.vcxproj
msvc/msvc2017/y_libutils_options/: y_libutils_options.vcxproj
msvc/msvc2017/y_libutils_options_xerces/: y_libutils_options_xerces.vcxproj
tests/texttest/: runAllTests.bat  runExampleTests.bat  runTesterTests.bat
tests/texttest/example/: config.example
tests/texttest/example/basic/: testsuite.example
tests/texttest/example/basic/help/: output.example
tests/texttest/example/basic/version/: options.example  output.example
tests/texttest/tester/: config.tester  testsuite.tester
tests/texttest/tester/config/csv/missing_file/: errors.tester  output.tester
tests/texttest/tester/config/csv/reading/: output.tester
tests/texttest/tester/config/from_characters/: output.tester
tests/texttest/tester/config/missing_file/: output.tester
tests/texttest/tester/config/plain/: output.tester
tests/texttest/tester/config/xml/missing_file/: errors.tester  output.tester
tests/texttest/tester/config/xml/reading/: output.tester
tests/texttest/tester/help/: testsuite.tester
tests/texttest/tester/help/from_example/: output.tester
tests/texttest/tester/help/headtail/: output.tester
tests/texttest/tester/help/many_synonymes/: options.tester  output.tester
tests/texttest/tester/help/topics/: output.tester
tests/texttest/tester/help/topics_headtail/: output.tester
tests/texttest/tester/plain/: output.tester
tests/texttest/tester/type_checking/check_bool_correct/: output.tester
tests/texttest/tester/type_checking/check_bool_incorrect/: errors.tester
tests/texttest/tester/type_checking/check_float_incorrect/: errors.tester
tests/texttest/tester/type_checking/check_int_correct/: output.tester
tests/texttest/tester/type_checking/check_int_incorrect/: errors.tester
tests/texttest/tester/type_checking/check_int_missing/: errors.tester
tests/texttest/tester/type_checking/check_string_correct/: output.tester
utils/: Makefile.am  Makefile.bc
utils/options/: CMakeLists.txt  Makefile.am  Makefile.bc  Option.cpp  Option.h  OptionCont.cpp  OptionCont.h  OptionsCont.cpp  OptionsCont.h  OptionsFileIO_CSV.cpp  OptionsFileIO_CSV.h  OptionsFileIO_XML.cpp  OptionsFileIO_XML.h  OptionsIO.cpp  OptionsIO.h  OptionsLoader.cpp  OptionsLoader.h  OptionsParser.cpp  OptionsParser.h  OptionsTypedFileIO.cpp  OptionsTypedFileIO.h  OptionsXercesHandler.cpp  OptionsXercesHandler.h  z_utils_options.vcproj
